syntax = "proto3";

package TunnelService;
option go_package = "gen/v1";

service TunnelService {
  rpc PostTweet (PostTweetRequest) returns (PostTweetResponse);
}

message PostTweetRequest {
  bytes image = 1;
  string message = 2;
}

message PostTweetResponse {
  string response = 1;
}